BooksPage/styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
   font-family: "Arial, Lato", sans-serif; 
    margin: 0;
    box-sizing: border-box;
    padding: 0;

}


html {
    scroll-behavior: smooth;
}

body {
    max-width: 100vw;
    overflow-x: hidden;
}

nav {
    height: 80px;
    display: flex;
}

.nav__container {
    width: 100%;
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
    align-items: center;
}

.firebrick {
    color: firebrick;
}

.logo {
    width: 160px;
}


ul {
    display: flex;
}

li {
    list-style-type: none;
}

img {
    width: 100%;
    height: 100%;
    max-height: 50vh;
    padding: 20px;
}

p {
    line-height: 1.5;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

/* NAV */

.nav__link {
    margin-left: 16px;
    text-decoration: none;
    font-size: 20px;
    color: black;
    padding: 8px;
}

.nav__link--primary {
    border: 2px solid firebrick;
    border-radius: 4px;
}

.nav__link:hover {
    text-decoration: underline;
}

.nav__link--primary:hover {
    text-decoration: none;
}

.btn__menu {
    background-color: transparent;
    font-size: 40px;
    text-align: center;
    border: none;
    color: firebrick;
    display: none;
}

.menu__backdrop {
    position: absolute;
    background-color: #242424;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 100;
    display: flex;
    justify-content: center;
    align-items: center;
    visibility: hidden;
    transition: all  300ms ease;
    opacity: 0;
}

.menu--open .menu__backdrop {
    visibility: visible;
    opacity: 1;
}


.menu--open {
    max-height: 100vh;
    overflow-y: hidden;
}

.menu__links {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.menu__list {
    padding: 32px 0;
}

.menu__link {
    color: white;
    font-size: 40px;;
}


.btn__menu--close {
    position: absolute;
    right: 20px;
    top: 10px;
    padding: 8px;
    color: white;
}

/* LANDING */


#landing {
    background: rgba(115, 66, 214, 0.1);
}


/* HEADER */


header {
    height: calc(100vh - 80px)
}

.header__container {
    padding: 32px;
    width: 100%;
    max-width: 720px;
    margin: 0 auto;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.header__description {
    display: flex;
    flex-direction: column;
    align-items: center;
}


h1 {
    font-size: 56px;
    color: black;
    margin-bottom: 24px;
    text-align: center;
}

h2 {
    text-align: center;
    font-size: 32px;
    margin-bottom: 32px;
}

button {
    cursor: pointer;
    display: flex;

}


button:active {
    transform: translateY(2px);
}


.btn {
    background-color: firebrick;
    color: white;
    padding: 12px 24px;
    font-size: 20px;
    border-radius: 4px;
    border: none;
    text-decoration: none;
    
}

.header__img--wrapper {
    padding: 20px;
    z-index: 2;
    
}

.container {
    padding: 56px 0;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;

}

.no-cursor {
    cursor: not-allowed;
}

/* HIGHLIGHTS */

#highlights {
    position: relative;
    max-width: 100vw;
}


#highlights:after,
#highlights:before {
    background: url('./assets/wave.svg');
    content: "";
    position: absolute;
    width:101vw;
    height: 12vw;
    left: 0;
    z-index: 1;
    background-size: cover;
    background-repeat: no-repeat;
}

#highlights:before {
    transform: translateY(-100%);
    top: 1px;
}

#highlights:after {
    transform: translateY(100%) rotate(180deg);
    bottom: 1px;
}

.highlight__wrapper {
    display: flex;
    flex-wrap: wrap;

}

.highlight {
    padding: 0 24px;
    width: calc(100% / 3);
    display: flex;
    flex-direction: column;
    align-items: center;
    

}

.highlight__para {
    text-align: center;
    max-width: 280px;
}

.highlight__img {
    border: 2px solid firebrick;
    color: firebrick;
    width: 100px;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 4px;
    font-size: 32px;
    margin-bottom: 24px;
}

.highlight__subtitle {
    font-size: 20px; 
    margin-bottom: 16px;
    text-align: center;
}


/* FEATURES */

#features {
    padding-top: 10vw;
    background-color: rgba(115, 66, 214, 0.1);
}

.books {
    display: flex;

}

.book {
    width: 25%;
    padding: 24px;
}

.book__img {
    max-height: 380px;
    transition: all 300ms ease;
    cursor: no-drop;
}

.book__img--wrapper{
    margin-bottom: 8px;
    border-radius: 4px;
    overflow: hidden;
    display: flex;
}


.book:hover .book__img {
    transform: scale(1.03)
}

.book__title {
    font-size: 20px;
    margin-bottom: 8px;
}

.book__title:hover {
    text-decoration: underline;
    cursor: not-allowed;
}

.book__ratings {
    margin-bottom: 8px;
    color: #fabf2a;
}

.book__price--normal {
    text-decoration: line-through;
    padding-right: 6px;
    color: #bfbfbf;
}


/* RECENT & EXPLORE */

#recent {
    margin: 5vw;
}

#explore {
    background: rgba(115, 66, 214, 0.1);
}




/*  FOOTER  */

.footer__container {
    display: flex;
    flex-direction: column;
    height: 20vh;
    background-color: rgb(67, 66, 66);
    
}

.footer__description {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer__logo {
    display: flex;
}

.footer__logo--img {
     width: 160px;
     filter: grayscale(1) invert(1);
     
}

.footer__link,
.footer__copyright {
    text-decoration: none;
    margin-right: 12px; 
    color: white;
}

.footer__list {
    margin: 12px 0 24px 0;
}

.footer__link {
    padding: 0 8px;
}


/* SMALL PHONES, TABLEST, LARGE SMARPHONES */
@media (max-width: 768px) {
    .header__description {
        padding: 0 24px;
    }

    h1 {
        font-size: 40px;
    }

    h2 {
        font-size: 26px;
    }

    button {
        font-size: 18px;
    }

   .book {
        width: 50%;
    }

}

/*  SMALL PHONES, LARGE SHAMRTPHONES*/
@media (max-width: 550px) {
   
    
    .btn__menu {
        display: block;
    }
   
    .nav__links {
        display: none;
    }

    .highlight {
        width: 100%;
    }

     
}

